--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "esnext",
+    "target": "ES2020",
+    "module": "ES2020",
     "baseUrl": "./",
     "moduleResolution": "node",
     "paths": {
