--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-haje",
   "productName": "Futubra",
-  "version": "1.7.6",
+  "version": "1.7.29",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode local",
@@ -15,6 +15,7 @@
     "url": "https://github.com/yuriygr/vue-haje/issues"
   },
   "dependencies": {
+    "@hcaptcha/vue3-hcaptcha": "^1.3.0",
     "@vue-norma/ui": "^2.5.11",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
