SSE и что-то еще

--- a/.env.prod
+++ b/.env.prod
@@ -11,6 +11,9 @@ VUE_APP_API_KEY = "devkey"
 VUE_APP_API_ENDPOINT = "https://api.futubra.ru/"
 VUE_APP_API_VERSION = "v1"
 
+VUE_APP_SSE_ENDPOINT = "https://api.futubra.ru/v1/events"
+
+
 VUE_APP_I18N_LOCALE = "ru"
 VUE_APP_I18N_FALLBACK_LOCALE = "ru"
 
