--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-haje",
   "productName": "Futubra",
-  "version": "1.8.100",
+  "version": "1.8.105",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode local",
@@ -30,12 +30,13 @@
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^1.2.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "compression-webpack-plugin": "^10.0.0",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.2.4"
   }
 }
